feat: add CRUD operations for books and fix ID handling

--- a/src/main/resources/templates/pages/books/list.html
+++ b/src/main/resources/templates/pages/books/list.html
@@ -20,12 +20,14 @@
                 <th>Genre</th>
                 <th>Publication Year</th>
                 <th>Availability Status</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody id="bookTable"></tbody>
     </table>
+    <a href="/books/add">Add New Book</a>
 
-    <script src="../../../static/js/books/books-list.js"></script>
+    <script src="/js/books/books-list.js"></script>
 </body>
 
 </html>
