--- a/src/main/resources/templates/pages/books/list.html
+++ b/src/main/resources/templates/pages/books/list.html
@@ -17,6 +17,12 @@
             <h1>Library Books</h1>
             <a href="/books/add" class="submit-btn">Add New Book</a>
 
+            <div class="search-section">
+                <input type="text" id="searchQuery" placeholder="Search by title or author" />
+                <button id="searchBtn" class="submit-btn">Search</button>
+                <button id="showAllBtn">Show All</button>
+            </div>
+
             <table>
                 <thead>
                     <tr>
