--- a/src/main/resources/templates/pages/books/list.html
+++ b/src/main/resources/templates/pages/books/list.html
@@ -40,6 +40,7 @@
         </main>
     </section>
 
+    <script src="/js/books/books-delete.js"></script>
     <script src="/js/books/books-list.js"></script>
     <script src="/js/sidebar.js"></script>
 </body>
